@@ -1,0 +1,127 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+ Copyright (C) 2006-2007 Will Farrington <wcfarrington@gmail.com>
+
+ This library is free software; you can redistribute it and/or
+ modify it under the terms of the GNU Library General Public
+ License as published by the Free Software Foundation; either
+ version 2 of the License, or (at your option) any later version.
+
+ This library is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ Library General Public License for more details.
+
+ You should have received a copy of the GNU Library General Public
+ License along with this library; if not, write to the
+ Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ Boston, MA 02111-1307, USA.
+
+
+ Theme based on the style of the same name from pastie.caboo.se
+-->
+
+<style-scheme id="cobalt" name="Cobalt" version="1.0">
+  <author>Will Farrington</author>
+  <description>Blue based color scheme</description>
+
+  <!-- Colors -->
+  <color name="faded_yellow"                value="#ffee80"/>
+  <color name="bright_orange"               value="#ff9d00"/>
+  <color name="faded_orange"                value="#ffb054"/>
+  <color name="nail_polish_pink"            value="#ff0044"/>
+  <color name="neon_pink"                   value="#ffdd00"/>
+  <color name="sky_blue"                    value="#0088ff"/>
+  <color name="teal_blue"                   value="#80ffbb"/>
+  <color name="light_blue"                  value="#0065bf"/>
+  <color name="medium_blue"                 value="#003b70"/>
+  <color name="dark_blue"                   value="#001b33"/>
+  <color name="black_blue"                  value="#000d1a"/>
+  <color name="white"                       value="#ffffff"/>
+  <color name="pale_grey"                   value="#eeeeee"/>
+  <color name="steel_grey"                  value="#333333"/>
+  <color name="spring_green"                value="#3ad900"/>
+  <color name="light_grey"                  value="#cccccc"/>
+  <color name="dark_maroon"                 value="#002f29"/>
+  <color name="bluish_grey"                 value="#777777"/>
+  <color name="steelblue3"                  value="#4f94cd"/>
+
+  <!-- Global Settings -->
+
+  <style name="text"                        foreground="white" background="dark_blue"/>
+  <style name="selection"                   foreground="white" background="#5598d7"/>
+  <style name="cursor"                      foreground="white"/>
+  <style name="current-line"                background="medium_blue"/>
+  <style name="line-numbers"                foreground="light_blue" background="black_blue"/>
+  <style name="draw-spaces"                 foreground="bluish_grey"/>
+  
+  <!-- Bracket Matching -->
+  <style name="bracket-match"               background="steelblue3"/>
+  <style name="bracket-mismatch"            background="dark_maroon" bold="true"/>
+  <style name="search-match"                foreground="white" background="sky_blue"/>
+
+  <!-- Bookmarks FIXME -->
+  <style name="bookmark"                    background="white"/>
+
+  <!-- Comments -->
+  <style name="def:comment"                 foreground="sky_blue" italic="true"/>
+  <style name="def:shebang"                 foreground="sky_blue" italic="true"/>
+  <style name="def:doc-comment-element"     foreground="spring_green"/>
+  <style name="def:doc-comment"             foreground="sky_blue" bold="true"/>
+
+  <!-- Constants and Variables-->
+  <style name="def:constant"                foreground="faded_yellow"/>
+  <style name="def:string"                  foreground="spring_green"/>
+  <style name="def:special-char"            foreground="light_grey"/>
+  <style name="def:special-constant"        foreground="nail_polish_pink" bold="true"/>
+  <style name="def:number"                  foreground="nail_polish_pink"/>
+  <style name="def:floating-point"          foreground="nail_polish_pink"/>
+  <style name="def:keyword"                 foreground="bright_orange" bold="true"/>
+  <style name="def:builtin"                 foreground="bright_orange" bold="true"/>
+  <style name="def:variable"                foreground="light_grey"/>
+  
+  <!-- Identifiers -->
+  <style name="def:identifier"              foreground="light_grey"/>
+  <style name="def:function"                use-style="def:identifier"/>
+
+  <!-- Statements -->
+  <style name="def:statement"               foreground="bright_orange"/>
+
+  <!-- Types -->
+  <style name="def:type"                    foreground="teal_blue"/>
+  
+  <!-- Others -->
+  <style name="def:error"                   foreground="white" background="dark_maroon" bold="true"/>
+  <style name="def:note"                    foreground="neon_pink" bold="true"/>
+  <style name="def:net-address-in-comment"  foreground="teal_blue" italic="false" underline="true"/>
+  <style name="def:preprocessor"            foreground="light_grey"/>
+    
+  <!-- Unknown? -->
+  <style name="def:specials"                foreground="white" background="neon_pink"/>
+  <style name="def:boolean"                 foreground="nail_polish_pink"/>
+
+  <!-- C Styles -->
+  <style name="c:preprocessor"              foreground="teal_blue" bold="true"/>
+  <style name="c:included-file"             foreground="spring_green"/>
+  <style name="c:common-defines"            foreground="sky_blue" bold="true"/>
+
+  <!-- Diff Styles -->
+  <style name="diff:ignore"                 foreground="bluish_grey"/>
+
+  <!-- Ruby Styles -->
+  <style name="ruby:module-handler"         foreground="teal_blue"/>
+  <style name="ruby:symbol"                 foreground="nail_polish_pink"/>
+  <style name="ruby:regex"                  foreground="teal_blue"/>
+
+  <!-- SH Styles -->
+  <style name="sh:function"                 foreground="neon_pink"/>
+  <style name="sh:others"                   map-to="text"/>
+  
+  <!-- XML Styles -->
+  <style name="xml:attribute-name"          foreground="light_grey"/>
+  <style name="xml:element-name"            foreground="teal_blue"/>
+  <style name="xml:entity"                  foreground="blue"/>
+  <style name="xml:processing-instruction"  bold="true"/>
+
+</style-scheme>
