@@ -1,3 +1,9 @@
+2009-02-04  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/language-specs/cobalt.xml:
+	* gtksourceview/language-specs/Makefile.am:
+	Add new blue based style. Thanks to Will Farrington.
+
 === gtksourceview 2.5.4 ===
 
 2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>
